# metafibonacci

./: CMakeLists.txt  main.cpp
